src/test/deca/context/invalid/oracle/condition_int.deca
{
    if(145){
        print("Hello world !");
    }
}